<resources>
    <string name="versionInfo">Změny v aplikaci - 1.2.1</string>
    <string name="versionNodes"> - nově funkční rozvrh (je třeba vyplnit přihlašovací údaje v nastavení) \n -DOPORUČENÍ - změnte si třídu v nastavení (změnit třídu) \n - mapa zobrazuje čísla místností</string>
    <string name="app_name">GyMik</string>
    <string name="action_settings">Nastavení</string>
    <string name="latestNews">Novinky</string>
    <string name="latestSupl">Suplování</string>
    <string name="drawer_open">Otevřít navigaci</string>
    <string name="drawer_close">Zavřít navigaci</string>
    <string name="prizemi">P</string>
    <string name="p1patro">1.</string>
    <string name="p2patro">2.</string>
    <string name="vestavba">V</string>
    <string name="pondeli">Po</string>
    <string name="utery">Út</string>
    <string name="streda">St</string>
    <string name="ctvrtek">Čt</string>
    <string name="patek">Pá</string>
    <string name="pickClass">Vyberte třídu :</string>
    <string name="continueString">Pokračovat</string>
    <string name="firstRun">Instalace</string>
    <string name="pleaseWait">Prosím vyčkejte</string>
    <string name="warning">Upozornění</string>
    <string name="exitDialog1">Opravdu chcete aplikaci ukončit během úvodního nastavení? Tato akce není doporučena.</string>
	<string name="exitDialog2">V této fázi aplikaci nelze ukončit, prosím vyčkejte na stažení potřebných dat.</string>
	<string name="noInternetDataDownloadFailed">Stažení dat potřebných pro spuštění se nezdařilo z důvodu nedostupnosti připojení k internetu. Připojte se a zkuste to znovu.</string>
	<string name="cantDownloadActualDataNoInternet">Nepodařilo se stáhnout aktuální data z důvodu nedostupného připojení k internetu</string>
	<string name="dialogOk">Ok</string>
	<string name="dialogExit">Konec</string>
	<string name="dialogSettings">Nastavení</string>
	<string name="dialogClose">Zavřít</string>
	<string name="dialogLink">Odkaz</string>
	<string name="noInternet">Internet nedostupný, prosím připojte se k internetu</string>
	<string name="noStorage">Není dostupné úložiště. Aplikace ke svému spuštění potřebuje externí úložiště(SD kartu), které je nyní nedostupné.</string>
	<string name="sDialogHodina">Hodina : </string>
	<string name="sDialogPredmet">Předmět : </string>
	<string name="sDialogStav">Stav : </string>
	<string name="sDialogSkupina">Skupina : </string>
	<string name="sDialogMistnost">Místnost : </string>
	<string name="sDialogNahrazuje">Nahrazuje : </string>
	<string name="bakUser">Uživatelské jméno : </string>
	<string name="bakPsw">Heslo : </string>
	<string name="customClassName">JINÁ</string>
	<string name="missingRozvrh">Chybí rozvrh</string>
	<string-array name="dayTimes">
	    <item>Půlnoc</item>
	    <item>Ráno</item>
	    <item>Kolem 11</item>
	    <item>Odpoledne</item>
	</string-array>
	<string-array name="dayTimesValues">
	    <item>midnight</item>
	    <item>morning</item>
	    <item>school</item>
	    <item>afternoon</item>
	</string-array>
</resources>